# serializer version: 1
# name: test_entities[climate-room_sensors][climate.heating_circuit_1_patterilammitys-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 50.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      'target_temp_step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heating_circuit_1_patterilammitys',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ouman_eh_800',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'heating_circuit',
    'unique_id': '01JABCDEFGHIJKLMNOPQRSTUVW_l1_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate-room_sensors][climate.heating_circuit_1_patterilammitys-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.5,
      'friendly_name': 'Heating circuit 1 Patterilämmitys',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 50.0,
      'min_temp': 5.0,
      'preset_mode': 'automatic',
      'preset_modes': list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 1,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heating_circuit_1_patterilammitys',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_entities[climate-room_sensors][climate.heating_circuit_2_lattialammitys-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 50.0,
      'min_temp': 5.0,
      'preset_modes': list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      'target_temp_step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heating_circuit_2_lattialammitys',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'ouman_eh_800',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': 'heating_circuit',
    'unique_id': '01JABCDEFGHIJKLMNOPQRSTUVW_l2_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[climate-room_sensors][climate.heating_circuit_2_lattialammitys-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 22.0,
      'friendly_name': 'Heating circuit 2 Lattialämmitys',
      'hvac_action': <HVACAction.HEATING: 'heating'>,
      'hvac_modes': list([
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      'max_temp': 50.0,
      'min_temp': 5.0,
      'preset_mode': 'automatic',
      'preset_modes': list([
        'automatic',
        'temperature_drop',
        'big_temperature_drop',
      ]),
      'supported_features': <ClimateEntityFeature: 401>,
      'target_temp_step': 1,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heating_circuit_2_lattialammitys',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
